Miscellaneous math mode adjustments.

--- a/init.org
+++ b/init.org
@@ -1600,7 +1600,7 @@ Enable AAS.
                     ("vp" . "+ $0")
                     ("seq" . "&= $0")
                     ("amp" . "& $0")
-                    ("grt" . "> $0")
+                    ("gth" . "> $0")
                     ("sgt" . "&> $0")
                     ("lst" . "< $0")
                     ("slt" . "&< $0")
@@ -1653,6 +1653,7 @@ Automatically correct words when pressing space bar.
        autocorrect-words-on-type
        (memq major-mode '(org-mode mail-mode text-mode))
        (not (texmathp))
+       (not (equal (TeX-current-macro) "text"))
        (not (org-in-src-block-p)))
       (when (and
              (equal (char-before) ? )
@@ -2646,9 +2647,9 @@ Set defaults.
 (setq-default org-export-with-smart-quotes t)
 
 
-;; always display inline images in org-mode
-(setq-default org-startup-with-inline-images t)
-(add-hook 'org-babel-after-execute-hook 'org-display-inline-images 'append)
+;; stop displaying inline images in org-mode
+(setq-default org-startup-with-inline-images nil)
+;; (add-hook 'org-babel-after-execute-hook 'org-display-inline-images 'append)
 
 
 ;; default image width 
@@ -3939,8 +3940,7 @@ For capturing drawings and diagrams:
       "python -c 'from maxwell import capture_area; capture_area(\"%s\")'"
       image-path))
     (select-frame-set-input-focus (selected-frame))
-    (open-line-down)
-    (insert (format "\n#+attr_latex: :scale .7\n[[%s]]\n\n" image-path))
+    (insert (format "#+attr_latex: :scale .7\n[[%s]]\n\n" image-path))
     (org-remove-inline-images)))
 
 
