Mostly math-related modifications.

--- a/init.org
+++ b/init.org
@@ -675,7 +675,7 @@ support.
                           `([,(cdr char-regexp) 0 font-shape-gstring]))))
 #+end_src
 
-Use fira code for greek letters in vterm.
+Use fira code for Greek letters in vterm.
 
 #+begin_src emacs-lisp :tangle yes
 (add-hook 'vterm-mode-hook (lambda ()
@@ -706,6 +706,35 @@ for more information."
 
 (add-hook 'org-mode-hook (lambda ()
                            (add-visual-replacement "---" "──")
+
+                           (push '("\\sqrt" . "√") prettify-symbols-alist)
+
+                           (push '("\\left(" . "(") prettify-symbols-alist)
+                           (push '("\\right)" . ")") prettify-symbols-alist)
+                           (add-visual-replacement "\\right)^2" ")²")
+                           (add-visual-replacement "\\right)^3" ")³")
+
+                           (push '("\\left|" . "|") prettify-symbols-alist)
+                           (push '("\\right|" . "|") prettify-symbols-alist)
+                           (add-visual-replacement "\\right|^2" "|²")
+                           (add-visual-replacement "\\right|^3" "|³")
+
+                           (push '("\\left[" .  "[") prettify-symbols-alist)
+                           (push '("\\right]" . "]") prettify-symbols-alist)
+                           (add-visual-replacement "\\right]^2" "]²")
+                           (add-visual-replacement "\\right]^3" "]³")
+
+                           (add-visual-replacement "\\left\\Vert" "||")
+                           (add-visual-replacement "\\right\\Vert" "||")
+
+                           (push '("\\vecb{a}" . "𝒂") prettify-symbols-alist)
+                           (push '("\\vecb{b}" . "𝒃") prettify-symbols-alist)
+                           (push '("\\vecb{c}" . "𝒄") prettify-symbols-alist)
+                           (push '("\\vecb{u}" . "𝒖") prettify-symbols-alist)
+                           (push '("\\vecb{v}" . "𝒗") prettify-symbols-alist)
+
+                           (push '("\\left\\langle" .  "〈") prettify-symbols-alist)
+                           (push '("\\right\\rangle" .  "〉") prettify-symbols-alist)
                            (push '("[ ]" .  "☐") prettify-symbols-alist)
                            (push '("[X]" . "☑" ) prettify-symbols-alist)
                            (push '("[-]" . "❍" ) prettify-symbols-alist)
@@ -1414,6 +1443,21 @@ Key bindings.
                                                        (evil-backward-char)))
 
 
+;; capitalization
+(evil-define-key 'normal global-map (kbd "g \'") #'(lambda ()
+                                                     (interactive)
+                                                     (save-excursion
+                                                       (if (not (equal (char-before) ? ))
+                                                           (evil-backward-word-begin 1))
+                                                       (upcase-char 1))))
+(evil-define-key 'normal global-map (kbd "g \"") #'(lambda ()
+                                                     (interactive)
+                                                     (save-excursion
+                                                       (if (not (equal (char-before) ? ))
+                                                           (evil-backward-word-begin 1))
+                                                       (downcase-word 1))))
+
+
 ;; make sure C-j doesn't actually create a new line in normal state
 (define-key evil-normal-state-map (kbd "C-j") #'evil-ret)
 
@@ -1593,23 +1637,28 @@ Enable AAS.
                     ("Omega" . "\\Omega$0")
 
                     ("ln" . "\\ln$0")
+                    ("exp" . "\\exp$0")
                     ("lo" . "\\log$0")
                     ("ein" . "\\in$0")
-                    ("eq" . "= $0")
-                    ("vm" . "- $0")
-                    ("vp" . "+ $0")
+
+                    ("par" . "\\left( $1 \\right)$0")
+
+                    ("equ" . " = $0")
+                    ("neq" . " \\neq $0")
+                    ("vm" . " - $0")
+                    ("vp" . " + $0")
                     ("seq" . "&= $0")
                     ("amp" . "& $0")
-                    ("gth" . "> $0")
+                    ("gtn" . " > $0")
                     ("sgt" . "&> $0")
-                    ("lst" . "< $0")
+                    ("lst" . " < $0")
                     ("slt" . "&< $0")
-                    ("leq" . "\\leq $0")
+                    ("leq" . " \\leq $0")
                     ("lseq" . "&\\leq $0")
-                    ("geq" . "\\geq $0")
+                    ("geq" . " \\geq $0")
                     ("rk" . "\\\\\\\\")
                     ("gseq" . "&\\geq $0")
-                    ("trip" . "\\equiv $0")
+                    ("trip" . " \\equiv $0")
                     ("strip" . "&\\equiv $0")
                     ("//" . "\\frac{$1{$2}$0"))))
 
@@ -2358,12 +2407,12 @@ Evil leader bindings.
 (evil-leader/set-key "M" #'mail)
 
 ;; open read mail buffer
-;; (evil-leader/set-key "n" #'(lambda (refresh-email)
-;;                              (interactive "P")
-;;                              (when refresh-email
-;;                                (message "Refreshing email...")
-;;                                (shell-command-to-string "mbsync gmail; notmuch new"))
-;;                              (notmuch)))
+(evil-leader/set-key "1" #'(lambda (refresh-email)
+                             (interactive "P")
+                             (when refresh-email
+                               (message "Refreshing email...")
+                               (shell-command-to-string "mbsync gmail; notmuch new"))
+                             (notmuch)))
 #+end_src
 
 * Files
@@ -2535,8 +2584,24 @@ Evil leader keybindings.
 Use =pdf-tools=.
 
 #+begin_src emacs-lisp :tangle yes
+(defvar pdf-hiding-cursor nil
+  "Last buffer was a PDF and was hiding cursor.")
+
+
 (use-package pdf-tools
   :config
+
+
+  (add-hook 'pdf-view-mode-hook
+            #'(lambda ()
+                (internal-show-cursor (get-buffer-window) t)
+                (setq pdf-hiding-cursor t)))
+
+  (add-hook 'post-command-hook
+            #'(lambda ()
+                (when (and pdf-hiding-cursor (not (equal major-mode 'pdf-view-mode)))
+                  (internal-show-cursor (get-buffer-window) t))))
+
 
   (pdf-tools-install))
 #+end_src
@@ -2551,8 +2616,8 @@ Scale images in image mode
 Use dark mode.
 
 #+begin_src emacs-lisp :tangle yes
-  (add-hook 'pdf-view-mode-hook #'(lambda ()
-                                    (pdf-view-themed-minor-mode 1)))
+;; (add-hook 'pdf-view-mode-hook #'(lambda ()
+;;                                   (pdf-view-themed-minor-mode 1)))
 #+end_src
 
 * Org
@@ -2574,6 +2639,7 @@ Make sure all code is run after org mode is loaded.
   <<org-mode-config>>
   <<org-mode-compilation>>
   <<org-mode-emphasis-markers>>
+  <<org-mode-greek>>
   <<org-mode-keybindings>>
   <<org-mode-faces>>
   <<org-mode-references>>
@@ -2963,6 +3029,15 @@ Code to show emphasis markers using a particular face.
 ;; thanks, https://www.reddit.com/r/emacs/comments/eipbvk/org_emphasis_marker_face/
 #+end_src
 
+Use other font for Greek text.
+
+#+begin_src emacs-lisp :tangle no :noweb-ref org-mode-greek
+;; not necessarily the best approach, but it works
+(add-hook 'org-mode-hook #'(lambda ()
+                             (set-fontset-font t 'greek (font-spec :family "Helvetica" :weight 'normal :height 0.75))))
+
+#+end_src
+
 Use variable pitch in org buffers.
 
 #+begin_src emacs-lisp :tangle yes
@@ -3143,6 +3218,8 @@ Add =evil-embrace= pairs to org mode.
 
 #+begin_src emacs-lisp :tangle no :noweb-ref org-mode-embrace
 (add-hook 'org-mode-hook (lambda ()
+                           (delete ?b evil-embrace-evil-surround-keys)
+
                            (embrace-add-pair ?i "/" "/")
                            (embrace-add-pair ?b "*" "*")
                            (embrace-add-pair ?u "_" "_")
@@ -3156,6 +3233,7 @@ Display entities in current line (thanks [[https://www.reddit.com/r/emacs/commen
   "(start . end) of current line in current buffer")
 (make-variable-buffer-local 'my/current-line)
 
+
 (defun my/unhide-current-line (limit)
   "Font-lock function"
   (let ((start (max (point) (car my/current-line)))
@@ -3165,6 +3243,7 @@ Display entities in current line (thanks [[https://www.reddit.com/r/emacs/commen
       (goto-char limit)
       t)))
 
+
 (defun my/refontify-on-linemove ()
   "Post-command-hook"
   (let* ((start (line-beginning-position))
@@ -3173,6 +3252,7 @@ Display entities in current line (thanks [[https://www.reddit.com/r/emacs/commen
     (setq my/current-line (cons start end))
     (when needs-update
       (font-lock-fontify-block 2))))
+
 
 (defun my/entity-unhighlight ()
   "Install"
@@ -3240,7 +3320,13 @@ Auto-capitalize words.
 #+begin_src emacs-lisp :tangle yes
 (use-package auto-capitalize
   :load-path "lisp/"
-  :hook (org-mode . auto-capitalize-mode))
+  :hook (org-mode . auto-capitalize-mode)
+
+  :config
+  (setq-default auto-capitalize-predicate
+                #'(lambda ()
+                    (and (not (texmathp))
+                         (not (org-in-src-block-p))))))
 #+end_src
 
 ** Key bindings
@@ -3321,6 +3407,7 @@ Set key bindings.
 ;; meta return in normal mode
 (evil-define-key 'normal org-mode-map (kbd "g o") #'(lambda ()
                                                       (interactive)
+                                                      (end-of-line)
                                                       (org-meta-return)
                                                       (evil-insert-state)))
 
@@ -4105,7 +4192,9 @@ Latex export options.
                  "\\newtheoremstyle{boxed}{8pt}{8pt}{}{}{\\upshape\\bfseries}{.}{.5em}{}\n"
                  "\\theoremstyle{boxed}\n"
                  "\\newtheorem{theorem}{Theorem}\n"
+                 "\\newtheorem{note}{Note}\n"
                  "\\newtheorem{exmp}{Example}\n"
+                 "\\newtheorem{exercise}{Exercise}\n"
                  "\\newtheorem{definition}{Definition}\n"
                  "\\newtheorem{lemma}{Lemma}[theorem]\n"
                  "\\usepackage{mdframed}\n"
@@ -4113,6 +4202,8 @@ Latex export options.
                  "\\AfterEndEnvironment{theorem}{\\end{mdframed}}\n"
                  "\\BeforeBeginEnvironment{exmp}{\\begin{mdframed}}\n"
                  "\\AfterEndEnvironment{exmp}{\\end{mdframed}}\n"
+                 "\\BeforeBeginEnvironment{exercise}{\\begin{mdframed}}\n"
+                 "\\AfterEndEnvironment{exercise}{\\end{mdframed}}\n"
                  "\\BeforeBeginEnvironment{definition}{\\begin{mdframed}}\n"
                  "\\AfterEndEnvironment{definition}{\\end{mdframed}}\n"
                  "\\pagestyle{fancy}\n"
@@ -4283,13 +4374,13 @@ Other config. Limit this section as much as possible.
           (goto-char (point-max))
           (yas-expand-snippet
            (format
-            "\n%s ${1:%s}\n$2/${1:$(if (or (not (yas-field-value 2)) (equal (yas-field-value 2) \"\")) yas-text (downcase yas-text))}/ $0 (${3:$$(yas-choose-value '(\"text. \" \"canvas\" \"work. \"))})"
+            "\n%s ${1:%s}\n\n$2/${1:$(if (or (not (yas-field-value 2)) (equal (yas-field-value 2) \"\")) yas-text (downcase yas-text))}/ $0 (${3:$$(yas-choose-value '(\"pow. \" \"mor. \" \"grim. \" \"hom. \" \"stew.\" \"lect. \"))})"
             (org-heading-asterisks) title)
            (point-max))
           (evil-insert-state))
       (goto-char (point-max))
       (yas-expand-snippet
-       "\n`(org-heading-asterisks)` $1\n$2/${1:$(if (equal (yas-field-value 2) \"\") yas-text (downcase yas-text))}/ $0 (${3:$$(yas-choose-value '(\"text. \" \"canvas\" \"work. \"))})"
+       "\n`(org-heading-asterisks)` $1\n\n$2/${1:$(if (equal (yas-field-value 2) \"\") yas-text (downcase yas-text))}/ $0 (${3:$$(yas-choose-value '(\"pow. \" \"mor. \" \"grim. \" \"hom. \" \"stew.\" \"lect. \"))})"
        (point-max))
       (evil-insert-state))
       (org-mark-ring-push old-point)))
