--- a/init.org
+++ b/init.org
@@ -203,6 +203,30 @@ Evil leader keybindings.
 (evil-leader/set-key "B" 'kill-all-buffers-except-scratch)
 #+end_src
 
+* Utilities
+
+#+begin_src emacs-lisp :tangle yes
+;; for debugging lists
+(defun print-elements-of-list (list)
+  "Print each element of LIST on a line of its own."
+  (while list
+    (print (car list))
+    (setq list (cdr list))))
+
+
+;; to add after index of list
+(defun insert-after (lst index newelt)
+  (push newelt (cdr (nthcdr index lst))) 
+  lst)
+
+
+;; easy way to wrap function for keyboard shortcut
+(defun wrap-fun (fun &rest args)
+  `(lambda ()
+    (interactive)
+    (apply #',fun ',args)))
+#+end_src
+
 * User interface
 
 General UI config.
@@ -709,6 +733,8 @@ for more information."
 
                            (push '("\\sqrt" . "√") prettify-symbols-alist)
 
+                           (push '("\\text" . "​") prettify-symbols-alist)
+
                            (push '("\\left(" . "(") prettify-symbols-alist)
                            (push '("\\right)" . ")") prettify-symbols-alist)
                            (add-visual-replacement "\\right)^2" ")²")
@@ -1147,20 +1173,6 @@ the future. This also happens to be my first "actual" emacs lisp
 program.
 
 #+begin_src emacs-lisp :tangle yes
-;; for debugging lists
-(defun print-elements-of-list (list)
-  "Print each element of LIST on a line of its own."
-  (while list
-    (print (car list))
-    (setq list (cdr list))))
-
-
-;; to add after index of list
-(defun insert-after (lst index newelt)
-  (push newelt (cdr (nthcdr index lst))) 
-  lst)
-
-
 ;; create buffer toggle ring
 (defvar buffer-toggle-ring '(t))
 (defvar buffer-toggle-ring-index 0)
@@ -1369,8 +1381,17 @@ General editing config.
 Hooks.
 
 #+begin_src emacs-lisp :tangle yes
-;; use better text wrapping
-(add-hook 'text-mode-hook #'auto-fill-mode)
+;; disable auto-fill-mode when asked politely
+(defun enable-polite-auto-fill ()
+  (pcase (org-collect-keywords '("AUTOFILL"))
+    (`(("AUTOFILL" . ,val))
+     (when (not (equal (car val) "nil"))
+       (auto-fill-mode 1)))
+    (-
+     (auto-fill-mode 1))))
+
+
+(add-hook 'text-mode-hook #'enable-polite-auto-fill)
 
 
 ;; highlight current line
@@ -1600,7 +1621,7 @@ Enable AAS.
                     ("gmu" . "\\mu$0")
                     ("gnu" . "\\nu$0")
                     ("gxi" . "\\xi$0")
-                    ("gomi" . "\\omicron$0")
+                    ("gmi" . "\\omicron$0")
                     ("gpi" . "\\pi$0")
                     ("grh" . "\\rho$0")
                     ("gsi" . "\\sigma$0")
@@ -1609,7 +1630,7 @@ Enable AAS.
                     ("gph" . "\\phi$0")
                     ("gch" . "\\chi$0")
                     ("gpsi" . "\\psi$0")
-                    ("gom" . "\\omega$0")
+                    ("gme" . "\\omega$0")
 
                     ("Alpha" . "\\Alpha$0")
                     ("Beta" . "\\Beta$0")
@@ -1647,19 +1668,19 @@ Enable AAS.
                     ("neq" . " \\neq $0")
                     ("vm" . " - $0")
                     ("vp" . " + $0")
-                    ("seq" . "&= $0")
-                    ("amp" . "& $0")
+                    ("seq" . " &= $0")
+                    ("amp" . " & $0")
                     ("gtn" . " > $0")
-                    ("sgt" . "&> $0")
+                    ("sgt" . " &> $0")
                     ("lst" . " < $0")
-                    ("slt" . "&< $0")
+                    ("slt" . " &< $0")
                     ("leq" . " \\leq $0")
-                    ("lseq" . "&\\leq $0")
+                    ("lseq" . " &\\leq $0")
                     ("geq" . " \\geq $0")
                     ("rk" . "\\\\\\\\")
-                    ("gseq" . "&\\geq $0")
+                    ("gseq" . " &\\geq $0")
                     ("trip" . " \\equiv $0")
-                    ("strip" . "&\\equiv $0")
+                    ("strip" . " &\\equiv $0")
                     ("//" . "\\frac{$1{$2}$0"))))
 
     (dolist (snippet snippets)
@@ -2581,6 +2602,13 @@ Evil leader keybindings.
 
 ** PDFs/images
 
+Revert buffer without confirmation.
+
+#+begin_src emacs-lisp :tangle yes
+(setq-default revert-without-query '(".pdf"))
+(add-hook 'pdf-view-mode-hook #'auto-revert-mode)
+#+end_src
+
 Use =pdf-tools=.
 
 #+begin_src emacs-lisp :tangle yes
@@ -3484,23 +3512,34 @@ Add evil leader key bindings.
 
 #+begin_src emacs-lisp :tangle no :noweb-ref org-mode-leader
 ;; export org/latex file as HTML
-(evil-leader/set-key "h" (lambda ()
-                           (interactive)
-                           (if (equal major-mode 'org-mode)
-                               (export-and-open-html)
-                             (if (equal major-mode 'latex-mode)
-                                 (call-interactively 'TeX-command-run-all)
-                               (browse-url-of-file)))))
+(evil-leader/set-key "h" #'(lambda ()
+                             (interactive)
+                             (if (equal major-mode 'org-mode)
+                                 (export-and-open-html)
+                               (if (equal major-mode 'latex-mode)
+                                   (call-interactively 'TeX-command-run-all)
+                                 (browse-url-of-file)))))
 
 
 ;; export org/latex file as PDF
-(evil-leader/set-key "P" (lambda ()
-                           (interactive)
-                           (if (equal major-mode 'org-mode)
-                               (export-and-open-pdf)
-                             (if (equal major-mode 'latex-mode)
-                                 (call-interactively 'TeX-command-run-all)
-                               (browse-url-of-file)))))
+(defvar org-pdf-separate-window '())
+
+(add-hook 'after-save-hook #'(lambda ()
+                               (if (and (equal major-mode 'org-mode)
+                                        (memq (buffer-name) org-pdf-separate-window))
+                                   (org-export-pdf-update))))
+
+(evil-leader/set-key "P" #'(lambda (separate-window)
+                             (interactive "P")
+                             (if (equal separate-window 1)
+                                 (if (memq (buffer-name) org-pdf-separate-window)
+                                     (setq org-pdf-separate-window (delete (buffer-name) org-pdf-separate-window))
+                                   (push (buffer-name) org-pdf-separate-window))
+                               (if (equal major-mode 'org-mode)
+                                   (export-and-open-pdf separate-window)
+                                 (if (equal major-mode 'latex-mode)
+                                     (call-interactively 'TeX-command-run-all)
+                                   (browse-url-of-file))))))
 
 
 ;; fill paragraph
@@ -4171,7 +4210,7 @@ Latex export options.
 (add-to-list 'org-latex-classes
              `("math-document"
                ,(concat
-                 "\\documentclass[a4paper,12pt]{book}\n"
+                 "\\documentclass[a4paper,12pt,oneside]{book}\n"
                  "\\usepackage[margin=1in]{geometry}\n"
                  "\\usepackage{csquotes}\n"
                  "\\usepackage{amsmath}\n"
@@ -4194,12 +4233,15 @@ Latex export options.
                  "\\newtheorem{theorem}{Theorem}\n"
                  "\\newtheorem{note}{Note}\n"
                  "\\newtheorem{exmp}{Example}\n"
+                 "\\newtheorem{corollary}{Corollary}\n"
                  "\\newtheorem{exercise}{Exercise}\n"
                  "\\newtheorem{definition}{Definition}\n"
                  "\\newtheorem{lemma}{Lemma}[theorem]\n"
                  "\\usepackage{mdframed}\n"
                  "\\BeforeBeginEnvironment{theorem}{\\begin{mdframed}}\n"
                  "\\AfterEndEnvironment{theorem}{\\end{mdframed}}\n"
+                 "\\BeforeBeginEnvironment{corollary}{\\begin{mdframed}}\n"
+                 "\\AfterEndEnvironment{corollary}{\\end{mdframed}}\n"
                  "\\BeforeBeginEnvironment{exmp}{\\begin{mdframed}}\n"
                  "\\AfterEndEnvironment{exmp}{\\end{mdframed}}\n"
                  "\\BeforeBeginEnvironment{exercise}{\\begin{mdframed}}\n"
@@ -4242,16 +4284,31 @@ Custom export functions.
   "Export \"org-mode\" file to latex before converting to PDF. Otherwise, convert to HTML first.")
 
 
-(defun export-and-open-pdf ()
+(defun export-and-open-pdf (separate-window)
   "Export \"org-mode\" file to PDF, then preview."
   (interactive)
   (let ((output-path (format "%s.pdf" (file-name-sans-extension (buffer-file-name)))))
     (if org-pdf-through-latex
-        (shell-command-to-string (format "latexmk -pdf %s" (org-latex-export-to-latex)))
+        (shell-command-to-string (format "latexmk -pdf -f %s; latexmk -c" (org-latex-export-to-latex)))
       (shell-command-to-string (format
                                 "wkhtmltopdf --disable-smart-shrinking %s %s"
                                 (org-html-export-to-html) output-path)))
-    (find-file output-path)))
+    (if separate-window
+        (find-file-other-window output-path)
+      (find-file output-path))))
+
+
+(defun org-export-pdf-update ()
+  "Export \"org-mode\" file to PDF in background."
+  (interactive)
+
+  (let ((output-path (format "%s.pdf" (file-name-sans-extension (buffer-file-name)))))
+    (save-window-excursion
+      (async-shell-command
+       (format
+        "latexmk -pdf -jobname=temp -f %s; latexmk -c; mv temp.pdf '%s'"
+        (org-latex-export-to-latex)
+        output-path)))))
 #+end_src
 
 Add head to org mode HTML export.
@@ -4338,8 +4395,14 @@ Other config. Limit this section as much as possible.
 
 
 ;; quick-calc
-(define-key global-map (kbd "C-'") #'quick-calc)
-(define-key org-mode-map (kbd "C-'") #'quick-calc)
+(defun clean-quick-calc ()
+  (interactive)
+  (with-temp-buffer
+    (quick-calc nil)
+    (kill-ring-save (point-min) (point-max))))
+
+(define-key global-map (kbd "C-'") #'clean-quick-calc)
+(define-key org-mode-map (kbd "C-'") #'clean-quick-calc)
 
 
 ;; recalculate table
