Added Calc substitutions and matrix snippets.

--- a/init.org
+++ b/init.org
@@ -1575,6 +1575,32 @@ Enable YASnippet.
                              (yas-activate-extra-mode 'latex-mode))))
 #+end_src
 
+Matrix-like snippets.
+
+#+begin_src emacs-lisp :tangle yes
+(defun insert-matrix-like (env rows cols)
+  (interactive "sEnvironment: \nnRows: \nnColumns: ")
+  (let ((beginning-marker (point-marker))
+        (end-marker (save-excursion
+                      (goto-char (1+ (point)))))
+        (matrix-string ""))
+    (insert (format "\\begin{%s}\n" env))
+    (dotimes (i rows)
+      (dotimes (j cols)
+        (setq matrix-string (concat matrix-string
+                                    (format
+                                     (if (equal j (1- cols)) "$%s" "$%s & ")
+                                     (+ 1 (* i cols) j)))))
+      (setq matrix-string (concat matrix-string (if (equal i (1- rows)) (format "\n\\end{%s}" env) "\\\\\\\n"))))
+    (yas-expand-snippet matrix-string)
+    (add-hook 'yas-after-exit-snippet-hook #'align-yasnippet-matrix)))
+
+
+(defun align-yasnippet-matrix ()
+  (align-regexp yas-snippet-beg yas-snippet-end "\\(\\s-*\\) &" 1 1 t)
+  (remove-hook 'yas-after-exit-snippet-hook #'align-yasnippet-matrix))
+#+end_src
+
 Enable AAS.
 
 #+begin_src emacs-lisp :tangle yes
@@ -1601,6 +1627,20 @@ Enable AAS.
            (yas-expand-snippet "\\\\( $1 \\\\)$0"))
     "jf" (lambda () (interactive)
            (yas-expand-snippet "\\begin{align*}\n$0\n\\end{align*}")))
+
+  (aas-set-snippets 'org-mode
+    :cond #'texmathp
+    "3det" (lambda () (interactive)
+             (insert-matrix-like "vmatrix" 3 3))
+    "2det" (lambda () (interactive)
+             (insert-matrix-like "vmatrix" 2 2))
+    "3mat" (lambda () (interactive)
+             (insert-matrix-like "bmatrix" 3 3))
+    "2mat" (lambda () (interactive)
+             (insert-matrix-like "bmatrix" 2 2))
+    "matr" (lambda (rows cols) (interactive "nRows: \nnColumns: ")
+             (insert-matrix-like "bmatrix" rows cols))
+    "matl" #'insert-matrix-like)
 
   (let ((snippets '(("sup" . "^{$1$0")
                     ("ud" . "_{$1$0")
@@ -1701,7 +1741,6 @@ Evil leader key bindings.
 ;; new snippet
 (evil-leader/set-key "n" #'yas-new-snippet)
 #+end_src
-
 
 ** Spelling
 
@@ -4289,7 +4328,11 @@ Custom export functions.
   (interactive)
   (let ((output-path (format "%s.pdf" (file-name-sans-extension (buffer-file-name)))))
     (if org-pdf-through-latex
-        (shell-command-to-string (format "latexmk -pdf -f %s; latexmk -c" (org-latex-export-to-latex)))
+        (shell-command-to-string
+         (format
+          "latexmk -pdf -jobname=temp -f %s; rm *.aux *.fls *.log *.out *.fdb_latexmk; mv temp.pdf '%s'"
+          (org-latex-export-to-latex)
+          output-path))
       (shell-command-to-string (format
                                 "wkhtmltopdf --disable-smart-shrinking %s %s"
                                 (org-html-export-to-html) output-path)))
@@ -4306,7 +4349,7 @@ Custom export functions.
     (save-window-excursion
       (async-shell-command
        (format
-        "latexmk -pdf -jobname=temp -f %s; latexmk -c; mv temp.pdf '%s'"
+        "latexmk -pdf -jobname=temp -f %s; rm *.aux *.fls *.log *.out *.fdb_latexmk; mv temp.pdf '%s'"
         (org-latex-export-to-latex)
         output-path)))))
 #+end_src
@@ -4393,17 +4436,26 @@ Other config. Limit this section as much as possible.
 ;; open link in the same window
 (add-to-list 'org-link-frame-setup '(file . find-file))
 
-
 ;; quick-calc
-(defun clean-quick-calc ()
-  (interactive)
-  (with-temp-buffer
-    (quick-calc nil)
-    (kill-ring-save (point-min) (point-max))))
+(defun clean-quick-calc (start end)
+  (interactive "r")
+  (if (region-active-p)
+      (progn
+        (let ((expression (buffer-substring start end)))
+          (delete-region start (if (equal (point-at-eol) end) (1- end) end))
+          (save-excursion
+            (goto-char start)
+            (insert (calc-eval expression)))))
+    (with-temp-buffer
+      (quick-calc nil)
+      (kill-ring-save (point-min) (point-max)))))
 
 (define-key global-map (kbd "C-'") #'clean-quick-calc)
 (define-key org-mode-map (kbd "C-'") #'clean-quick-calc)
 
+(add-hook 'calc-mode-hook #'(lambda ()
+                              (calc-latex-language nil)
+                              (calc-radians-mode)))
 
 ;; recalculate table
 (define-key org-mode-map (kbd "C-M-'") #'org-table-recalculate)
@@ -4615,3 +4667,4 @@ Use GhostText to edit with Emacs.
 
   (atomic-chrome-start-server))
 #+end_src
+
