Fixed the much-hated save dictionary word prompt.

--- a/init.org
+++ b/init.org
@@ -1837,8 +1837,14 @@ Set evil-leader key bindings for spelling-related functions.
 (evil-leader/set-key "C" #'cycle-ispell-languages)
 
 
-;; change or save spelling
-(evil-leader/set-key "[" #'flyspell-correct-word-before-point)
+;; save spelling
+(evil-leader/set-key "[" #'(lambda ()
+                             (interactive)
+                             (let ((current-location (point))
+                                   (word (flyspell-get-word)))
+                               (when (consp word)
+                                 (flyspell-do-correct 'save nil (car word) current-location (cadr word) (caddr word) current-location))
+                               (setq ispell-pdict-modified-p nil))))
 #+end_src
 
 Customize fLyspell faces.
