--- a/init.org
+++ b/init.org
@@ -925,8 +925,10 @@ If COMMAND is nil, the key-chord is removed."
 
 
 ;; increment/decrement at point
-(define-key global-map (kbd "C-9") #'evil-numbers/dec-at-pt)
-(define-key global-map (kbd "C-0") #'evil-numbers/inc-at-pt)
+(use-package evil-numbers
+  :config
+  (define-key global-map (kbd "C-9") #'evil-numbers/inc-at-pt)
+  (define-key global-map (kbd "C-0") #'evil-numbers/dec-at-pt))
 
 
 ;; convenient remap for ex state
@@ -1833,7 +1835,7 @@ Enable AAS.
                       ("sqt" . "\\sqrt{$1$0")
 
                       ("equ" . " = $0")
-                      ("neq" . " \\neq $0")
+                      ("nequ" . " \\neq $0")
                       ("vm" . " - $0")
                       ("vp" . " + $0")
                       ("seq" . " &= $0")
@@ -1901,6 +1903,12 @@ Automatically correct words when pressing space bar.
 
 
 (add-hook 'post-self-insert-hook #'correct-word-before-space)
+
+
+;; avoid triggering autocorrect
+(define-key org-mode-map (kbd "S-SPC") #'(lambda ()
+                                           (interactive)
+                                           (insert ? )))
 
 
 (define-key org-mode-map (kbd "<f3>") #'(lambda ()
@@ -4100,19 +4108,28 @@ This is a :filter-args advice for `message`."
 
           (set-temporary-face-attributes
            :foreground color-background
-           '(org-document-title))
+           '(org-document-title
+             outline-1
+             outline-2
+             outline-3
+             outline-4
+             outline-5
+             outline-6
+             outline-7
+             outline-8))
 
           (set-temporary-face-attributes
-           :background "#FBFBFB"
+           :background "#FFF"
            '(org-block-begin-line
              org-block-end-line
+             sp-pair-overlay-face
              yas-field-highlight-face))
 
           (set-temporary-face-attributes
            :foreground color-green
            '(yas-field-highlight-face))
 
-          (set-background-color "#FBFBFB")
+          (set-background-color "#FFF")
           (set-foreground-color color-background))
         (setq distraction-free-background-set t))
     (when distraction-free-background-set
@@ -4133,6 +4150,7 @@ This is a :filter-args advice for `message`."
   (if (equal olivetti-mode nil)
       (progn
         (when use-mixed-pitch
+          (olivetti-set-width 75)
           (mixed-pitch-mode 1)
           (setq-local line-spacing 4))
         (setq-local default-mode-line-format mode-line-format)
@@ -4152,8 +4170,7 @@ This is a :filter-args advice for `message`."
               (when line-spacing
                 (save-excursion
                   (end-of-line)
-                  (unless (equal (char-before) ? )
-                    (insert ? ))))))
+                  (insert ? )))))
 
 
 (add-hook 'evil-insert-state-exit-hook
